# iscc-resolver

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
isccr/: asgi.py  settings.py  standalone.py  urls.py  utils.py  wsgi.py
isccr/core/: admin.py  models.py  views.py
isccr/core/migrations/: 0001_initial.py  0002_auto_20210904_1647.py
isccr/observers/: bloxberg.py  coblo.py
tests/: test_iscc_resolver.py
traefik/: traefik.toml
